--- a/app.json
+++ b/app.json
@@ -18,6 +18,16 @@
          "description": "Your bot token. Get one from @BotFather duh",
          "required": true,
          "value": ""
+      "API_ID": {
+         "description": "Get this value from my.telegram.org/apps.",
+         "required": true,
+         "value": ""
+      },
+      "API_HASH": {
+         "description": "Get this value from my.telegram.org/apps.",
+         "required": true,
+         "value": ""
+        
       },
       "OWNER_ID": {
          "description": "Your user ID as an integer.",
